# neura-dynamics-assignment

./: README.md  main.py  pyproject.toml  requirements.txt  test.py
company_policy_chat/config/: config.yaml
company_policy_chat/logger/: custom_logger.py
company_policy_chat/prompts/: prompts_library.py
company_policy_chat/src/document_ingestion/: ingestion.py
company_policy_chat/src/document_retrieval/: retrieval.py
company_policy_chat/utils/: config_loader.py  file_utils.py  model_loader.py
data/: goldens.csv
faiss_index/: index.faiss  index.pkl
notebook/: evaluation.ipynb
